# family_emotions_app_new

./: .coveragerc  .dockerignore  .env.example  .gitignore  BUILD_VERSION  COOLIFY_DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.md  Dockerfile  Makefile  README.md  TESTING_REPORT.md  TEST_VERSION.txt  alembic.ini  check_dataclasses.py  deploy.sh  docker-compose.coolify.yml  docker-compose.production.yml  docker-compose.simple.yml  docker-compose.v3.yml  docker-compose.yml  nixpacks.toml  pyproject.toml  pytest.ini  sonar-project.properties  start.sh
.github/workflows/: test.yml
alembic/: env.py
migrations/: env.py
scripts/: run_tests.sh
src/: __init__.py  bot.py  config.py  main.py
src/application/: commands_backup.py  dto.py
src/application/commands/: analysis_commands.py  user_commands.py
src/application/services/: __init__.py  analysis_service.py  user_service.py
src/domain/: domain_events.py  events.py  exceptions.py
src/domain/aggregates/: __init__.py  situation.py  user.py
src/domain/analysis/aggregates/: __init__.py
src/domain/analysis/events/: __init__.py
src/domain/analysis/repositories/: __init__.py
src/domain/analysis/value_objects/: __init__.py
src/domain/repositories/: base.py  situation.py  user.py
src/domain/user/aggregates/: __init__.py
src/domain/user/events/: __init__.py
src/domain/user/repositories/: __init__.py
src/domain/user/value_objects/: __init__.py
src/domain/value_objects/: __init__.py
src/infrastructure/cache/: rate_limiter.py
src/infrastructure/claude/: __init__.py  adapter.py
src/infrastructure/config/: settings.py
src/infrastructure/database/: models.py  repositories.py  session.py
src/infrastructure/external_services/: claude_analyzer.py
src/infrastructure/health/: __init__.py  health_check.py
src/infrastructure/persistence/: analysis_repository.py  database.py  models.py  user_repository.py
src/infrastructure/security/: __init__.py  validators.py
src/presentation/: keyboards.py  states.py
src/presentation/handlers/: __init__.py  analysis.py  menu.py  start.py  translator.py
src/presentation/telegram/: bot.py  keyboards.py  middlewares.py  states.py
src/presentation/telegram/handlers/: analysis.py  registration.py  (+1 more)
tests/: README.md  conftest.py
tests/e2e/: test_user_journey.py
tests/integration/: test_claude_adapter.py  test_redis_cache.py  test_repositories.py
tests/unit/: test_analysis_service.py  test_domain_events.py  test_situation_aggregate.py  test_telegram_handlers.py  test_user_aggregate.py  test_user_service.py  test_value_objects.py  test_value_objects_enhanced.py
